--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.1",
+    "chalk": "^4.1.2",
+    "console-stamp": "^3.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "md5": "^2.3.0",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^6.8.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "request": "^2.88.2",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.0",
+    "xml2js": "^0.6.2"
   }
 }
