--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,34 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.141",
+    "@mui/material": "^5.14.3",
+    "@mui/x-data-grid": "^6.11.0",
+    "@mui/x-date-pickers": "^6.12.0",
+    "axios": "^1.2.1",
+    "formik": "^2.4.3",
+    "humanize-duration": "^3.29.0",
+    "md5": "^2.3.0",
+    "moment-timezone": "^0.5.43",
+    "notistack": "^3.0.1",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "react-advanced-cropper": "^0.20.0",
+    "react-color": "^2.19.3",
+    "react-highlight-words": "^0.18.0",
+    "react-imask": "^7.1.3",
+    "react-medium-image-zoom": "^5.1.8",
+    "react-number-format": "^5.3.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.4.5",
+    "react-to-print": "^2.14.11",
+    "react-zoom-pan-pinch": "^3.6.1",
+    "reactour": "^1.19.4",
+    "recoil": "^0.7.7",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
